<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICareMyself</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="takePhoto">TAKE PHOTO</string>
    <string name="lat">Lat</string>
    <string name="latitude">LAT</string>
    <string name="lng">LNG</string>
    <string name="note">Note</string>
    <string name="save">SAVE</string>
    <string name="capturedImage">Captured Image</string>
    <string name="health">Health Info</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="listimage">Image</string>
    <string name="report">All Reports</string>
    <string name="location">Current Location</string>
    <string name="back">BACK</string>
    <string name="homepageimage">homepageimage</string>
    <string name="meetingPlace">Health Info</string>
    <string name="reg">Register</string>
    <string name="view">View</string>
    <string name="description">Note</string>
    <string name="contactdetails">Details</string>
    <string name="phone">Phone</string>
 

</resources>
