<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#e1e1e1"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageView
            android:id="@+id/ivTakePhoto"
            android:layout_width="259dp"
            android:layout_height="0dp"
            android:layout_weight="0.46"
            android:contentDescription="@string/capturedImage"
            android:src="@drawable/abc_ab_share_pack_holo_dark" />

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#2196F3"
            
            android:onClick="dispatchTakePictureIntent"
            android:padding="14dp"
            android:text="@string/takePhoto"
            android:textColor="#ffffff"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/note"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|date"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvContactEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#2196F3"
            android:onClick="insertData"
            android:padding="14dp"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:typeface="monospace" />
    </LinearLayout>

</ScrollView>