<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#e1e1e1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.noman.icaremyself.PrescriptionPlaceActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/meetingPlace"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/viewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/regBtn"
        android:layout_alignLeft="@+id/regBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/regBtn"
        android:layout_alignStart="@+id/regBtn"
        android:layout_marginBottom="90dp"
        android:background="#2196F3"
        android:drawableLeft="@drawable/ic_action_collection"
        android:drawableStart="@drawable/ic_action_collection"
        android:text="@string/view"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/viewBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="20dp"
        android:background="#2196F3"
        android:drawableLeft="@drawable/ic_action_edit"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_action_edit"
        android:text="@string/reg"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:typeface="monospace" />

</RelativeLayout>